Добавлена неполная реализация классов для корзины.

--- a/index.html
+++ b/index.html
@@ -12,6 +12,24 @@
         <p class="logo">Интернет магазин</p>
         <button class="btn-cart btn" type="button">Корзина</button>
     </header>
+    <div class="cart">
+        <div class="cart-title cart-row">
+            <div>Название</div>
+            <div>Цена за ед.</div>
+            <div>Количество</div>
+            <div>Общая стоимость</div>
+            <div></div>
+        </div>
+
+        <div class="cart-content">
+
+        </div>
+
+        <div class="cart-status cart-row">
+            <button class="btn-clear btn">Очистить корзину</button>
+            <p>В корзине <span id="cartTotalCount"></span> товаров на сумму <span id="cartTotalPrice"></span> рублей.</p>
+        </div>
+    </div>
     <main>
         <div class="products">
         </div>
