Домашнее задание выполено.

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         <p class="logo">Интернет магазин</p>
         <button class="btn-cart btn" type="button">Корзина</button>
     </header>
-    <div class="cart">
+    <div class="cart invisible">
         <div class="cart-title cart-row">
             <div>Название</div>
             <div>Цена за ед.</div>
@@ -34,7 +34,8 @@
         <div class="products">
         </div>
     </main>
-    <script defer src="js/main.js"></script>
+    <script src="https://kit.fontawesome.com/3cc71fbe09.js"></script>
+    <script src="js/main.js"></script>
 </body>
 
 </html>
