--- a/index.html
+++ b/index.html
@@ -15,56 +15,24 @@
     <div id="app">
         <header class="header">
             <h2 class="logo">E-Commerce</h2>
-            <form action="#" class="search" @submit.prevent="filterGoods">
-                <input type="text" class="search__input" placeholder="Поиск" v-model="searchLine">
-                <button type="submit" class="btn search__button"><i class="fas fa-search"></i></button>
-            </form>
-            <div class="cart-top">
-                <div class="cart-info">{{cart.totalPrice}} р.</div>
-                <div class="btn-cart btn" @click="cartVisible()">Корзина</div>
-                <div class="cart-div invisible">
-                    <table class="cart">
-                        <tr class="cart__row">
-                            <td class="cart__cell">Название</td>
-                            <td class="cart__cell">Цена за ед.</td>
-                            <td class="cart__cell">Количество</td>
-                            <td class="cart__cell">Общая стоимость</td>
-                            <td class="cart__cell"></td>
-                        </tr>
-                        <tr class="cart__row" v-for="cartItem in cart.cartItems">
-                            <td class="cart__cell">{{cartItem.product_name}}</td>
-                            <td class="cart__cell">{{cartItem.price}}</td>
-                            <td class="cart__quantity cart__cell">
-                                <i class="fas fa-plus cursor-pointer" @click="plusCartItem(cartItem)"></i>
-                                <div class="cart-quantity">{{cartItem.quantity}}</div>
-                                <i class="fas fa-minus cursor-pointer" @click="minusCartItem(cartItem)"></i>
-                            </td>
-                            <td class="cart__cell">{{cartItem.price*cartItem.quantity}}</td>
-                            <td class="cart__cell"><i class="far fa-trash-alt cursor-pointer" @click="deleteCartItem(cartItem)"></i></td>
-                        </tr>
-
-                    </table>
-                    <div class="cart__status">{{cartStatusStr}}</div>
-                </div>
-            </div>
+            <search ref="search"></search>
+            <cart ref="cart"></cart>
 
         </header>
 
         <main class="content">
-            <div class="catalog">
-                <div class="product" v-for="product in filter">
-                    <img :src="defaultImage" :alt="product.product_name" class="product__img">
-                    <h3>{{product.product_name}}</h3>
-                    <p>{{product.price}} р.</p>
-                    <button class="buy-btn btn" @click="addProduct(product)">Купить</button>
-                </div>
-            </div>
+            <product-list ref="catalog"></product-list>
         </main>
     </div>
 
     <script src="https://kit.fontawesome.com/3cc71fbe09.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js"></script>
-    <script src="js/script.js"></script>
+    <script src="js/product.js"></script>
+    <script src="js/product-list.js"></script>
+    <script src="js/cart-item.js"></script>
+    <script src="js/cart.js"></script>
+    <script src="js/search.js"></script>
+    <script src="js/script.js" defer></script>
 </body>
 
 </html>
